<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuBackground"
    tools:context=".MenuActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/global_background"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout

            android:id="@+id/quality_cell"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/quality_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/quality_eng"
                android:layout_marginLeft="110dp"
                android:textSize="25sp"

                android:textColor="@color/textColor" />

            <LinearLayout
                android:id="@+id/quality_choose"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:gravity="center"
                    android:id="@+id/quality_low"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/quality_low_eng"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/quality_middle"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/quality_medium_eng"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/quality_high"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/quality_high_eng"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView

                    android:id="@+id/image_style_preview"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:background="@drawable/cross"
                    android:scaleType="fitXY"/>
                <TextView
                    android:paddingLeft="42dp"
                    android:id="@+id/default_style_cell"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/style_choose_eng"
                    android:layout_margin="5dp"
                    android:textSize="25sp"

                    android:textColor="@color/textColor" />
            </LinearLayout>
            <android.support.v7.widget.RecyclerView

                android:id="@+id/choose_default_style_rv"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="vertical"
                android:visibility="invisible">

            </android.support.v7.widget.RecyclerView>

        </LinearLayout>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lang_text"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/choose_lang_text_eng"
                android:layout_marginLeft="110dp"
                android:textSize="25sp"

                android:textColor="@color/textColor" />

            <LinearLayout
                android:id="@+id/choose_lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <TextView
                    android:gravity="center"
                    android:id="@+id/eng_choose"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/eng_text"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />

                <TextView
                    android:gravity="center"
                    android:id="@+id/rus_choose"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/rus_text"
                    android:textAlignment="center"
                    android:textColor="@color/textColor"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>